--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
     <string name="app_name">Crypto App</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="api_key">241e6459-a362-43a1-84a7-a7ea56c9795d</string>
+    <string name="symbol">Symbol</string>
+    <string name="price">Price (USD)</string>
+    <string name="change_1h">Change 1h</string>
+    <string name="change_24h">Change 24h</string>
+    <string name="change_7d">Change 7days</string>
+    <string name="last_update">Last update</string>
+    <string name="price_frmt">$ %1$s</string>
+    <string name="redText">#FF0000</string>
+    <string name="greenText">#32CD32</string>
 </resources>
